# terdo

./: .gitignore  README.md  hello.py  main.py  main.tcss  pyproject.toml  styles.tcss
components/: new_task.py  note.py  task_list.py  task_overview.py
models/: task.py
terdo/: main.py  styles.tcss
terdo/components/: new_task.py  note.py  search.py  task_list.py  task_overview.py
terdo/models/: task.py
terdo/utils/: io.py  tasks_io.py
tests/: test_app.py  test_io.py
