[project]
name = "terdo"
version = "0.1.0"
description = "A terminal todo app!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual[syntax]>=2.1.2",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "terdo",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
terdo = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
